--- a/src/app/pages/event-detail/event-detail.page.scss
+++ b/src/app/pages/event-detail/event-detail.page.scss
@@ -135,13 +135,14 @@ ion-title {
   font-size: 0.6em;
   margin-top: 2px;
   font-family: "Poppins", sans-serif;
+  color: var(--ion-color-dark);
 }
 
 .precios_div {
   font-size: 1.3em;
   font-weight: bold;
   font-family: "Poppins", sans-serif;
-  color: #6b6b6b;
+  color: var(--ion-color-dark);
 }
 
 .puntos-venta {
