--- a/src/app/pages/selling-points/selling-points.page.html
+++ b/src/app/pages/selling-points/selling-points.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="selling-points-title">
-    <p class="selling_points_event">Puntos de venta</p>
+    <p class="selling_points_event title_selling">Puntos de venta</p>
     <ion-icon name="close-outline" (click)="cancelar()"></ion-icon>
   </div>
   <ion-grid>
