evento en curso

--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <ng-template #start>
-        <div class="cuenta-regresiva">
+        <div class="event_start">
           Evento en curso
         </div>
       </ng-template>
