Quitando errores para compilado de producción.

--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -108,7 +108,7 @@
     </div>
     <div
       class="precio"
-      (click)="openModalSellingPoint(instagram, tickAntel, facebook, whatsapp)"
+      (click)="openModalSellingPoint()"
     >
       <div><i class="fas fa-ticket-alt mark-info"></i></div>
       <div id="event-detail-container" class="puntos-venta">
